# AgenticAI

1_deep_research/: lab1.ipynb  lab2.ipynb
2_engineering_team/team/: README.md  pyproject.toml
3_trading_floor/: 1_lab1.ipynb
3_trading_floor/sandbox/: banoffee.md
Agents/: pyvenv.cfg
Agents/Scripts/: activate  activate.bat
first_experiment/: README.md  pyproject.toml
first_experiment/output/: Sorter.py  Sorter.py_design.md  app.py  test_Sorter.py
first_experiment/src/first_experiment/: crew.py  main.py
first_experiment/src/first_experiment/config/: agents.yaml  tasks.yaml
