[project]
name = "first_experiment"
version = "0.1.0"
description = "First_Experiment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "gradio>=5.42.0",
]

[project.scripts]
first_experiment = "first_experiment.main:run"
run_crew = "first_experiment.main:run"
train = "first_experiment.main:train"
replay = "first_experiment.main:replay"
test = "first_experiment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
